# go-it-web-hw2-docker

./: Dockerfile  README.md  pyproject.toml  requirements.txt
pva_poetry/pva/: __init__.py  handlers.py  note_book.py  start.py
